# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "com_google_ads_confidential_match",
    version = "0.0.0",
)

bazel_dep(name = "protobuf", version = "29.5", repo_name = "com_google_protobuf")
bazel_dep(name = "abseil-cpp", version = "20240722.0", repo_name = "com_google_absl")
bazel_dep(name = "rules_python", version = "0.33.2")
bazel_dep(name = "googletest", version = "1.16.0.bcr.1", repo_name = "com_google_googletest")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

# Rules python forbids building as the root user, but we build as the root user
# in the CI docker container and in the build_within_container scripts, so we
# must explicitly tell it to ignore this.
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.9",
)
